# nokhwa

./: Cargo.toml  flake.nix
.github/workflows/: examples.yml  test.yml
examples/captesting/src/: main.rs
examples/capture/src/: main.rs
examples/decoder_test/src/: main.rs
examples/threaded-capture/src/: main.rs
nokhwa-bindings-linux/: Cargo.toml
nokhwa-bindings-linux/src/: lib.rs  pipewire.rs  v4l2.rs
nokhwa-bindings-macos/src/: lib.rs
nokhwa-bindings-windows/src/: lib.rs
nokhwa-core/: Cargo.toml
nokhwa-core/assets/: chichen_itza.i420  chichen_itza.yuyv
nokhwa-core/assets/test/: chichen_itza.bgra
nokhwa-core/src/: camera.rs  capture.rs  decoder.rs  error.rs  format_request.rs  frame_buffer.rs  frame_format.rs  lib.rs  pixel_format.rs  platform.rs  properties.rs  query.rs  ranges.rs  stream.rs  traits.rs  types.rs  utils.rs
nokhwa-core/src/decoders/: general.rs
nokhwa-core/tests/assets/: README.md  chichen_itza.bgra  chichen_itza.bgra_i420  chichen_itza.nv12_i420  chichen_itza.rgb  chichen_itza.yuyv  chichen_itza.yuyv_i420
nokhwa-decoder/: Cargo.toml
src/: camera.rs  lib.rs  query.rs  threaded.rs
src/backends/capture/: avfoundation.rs  browser_camera.rs  mod.rs  msmf_backend.rs  opencv_backend.rs  v4l2_backend.rs
