[package]
name = "nokhwa-core"
version = "0.2.0"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
edition = "2021"
description = "Core type definitions for nokhwa"
keywords = ["camera", "webcam", "capture", "cross-platform"]
categories = ["api-bindings", "multimedia", "web-programming"]
license = "Apache-2.0"
repository = "https://github.com/l1npengtul/nokhwa"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serialize = ["serde"]
wgpu-types = ["wgpu"]
opencv-mat = ["opencv", "opencv/clang-runtime"]
docs-features = ["serialize", "wgpu-types"]
async = ["async-trait", "flume/async"]
test-fail-warnings = []


[dependencies]
thiserror = "2.0"
bytes = "1.3"
paste = "1.0"
flume = "0.11"
num-traits = "0.2"

[dependencies.num-rational]
version = "0.4"
default-features = false
features = ["serde", "std"]

[dependencies.image]
version = "0.25"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.wgpu]
version = "23"
optional = true

[dependencies.opencv]
version = "0.93"
default-features = false
optional = true

[dependencies.async-trait]
version = "0.1"
optional = true

[dependencies.futures]
version = "0.3"
optional = true

[dependencies.rgb]
version = "0.8"

[package.metadata.docs.rs]
features = ["docs-features"]
