[package]
name = "nokhwa-decoder"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.nokhwa-core]
version = "0.2"
path = "../nokhwa-core"

[dependencies.dcv-color-primitives]
version = "0.6"
optional = true

[dependencies.yuvutils-rs]
version = "0.5"
optional = true

[dependencies.mozjpeg]
version = "0.10"
optional = true
